--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -19,3 +19,33 @@ inputs, button, textarea{
 button{
     cursor: pointer;
 }
+
+form input { 
+    width: 100%;
+    height: 60px;
+    color: #333;
+    border : 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 0 24px;
+}
+
+.button{
+    width: 100%;
+    height: 60px;
+    background: #e02041;
+    border : 0; 
+    border-radius : 8px; 
+    color: #FFF; 
+    font-weight: 700; 
+    margin-top: 16px;
+    display: inline-block;
+    text-align: center; 
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    transform: filter 0.4s;
+
+}
+.button:hover{
+    filter: brightness(90%);
+}
