--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -6,7 +6,7 @@
 
     display: flex; 
     align-items: center;
-    justify-content:  center;
+    justify-content:  space-between;
 }
 
 
@@ -25,23 +25,6 @@
     margin-bottom: 32px;
 }
 
-.logon-container section.form a {
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-    color: #41414d;
-    font-size: 18px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: opacity 0.2s;
-}
 
-.logon-container section.form form a svg{
-    margin-right: 8px;
-}
-
-.logon-container section.form form a:hover{
-    opacity: 0.8;
-}
 
 
