--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -29,6 +29,19 @@ form input {
     padding: 0 24px;
 }
 
+form textarea { 
+    width: 100%;
+    min-height: 140px;
+    resize: vertical;
+    height: 60px;
+    color: #333;
+    font-size: 14px;
+    border : 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
+}
+
 .button{
     width: 100%;
     height: 60px;
